updating CI/CD to support linux

--- a/.github/workflows/build_plugin_binaries.yml
+++ b/.github/workflows/build_plugin_binaries.yml
@@ -23,3 +23,7 @@ jobs:
       with:
         GOOS: windows
         GOARCH: amd64
+    - uses: "./.github/actions/build-and-persist-plugin-binary"
+      with:
+        GOOS: linux
+        GOARCH: amd64
